@@ -142,6 +142,7 @@ do_help()
    --no-vmlinux                  no kernel image (vmlinux) available
    --kernel-range=start,end      kernel range vma address in hexadecimal
    --buffer-size=num             kernel buffer size in sample units
+   --cpu-buffer-size=num         per-cpu buffer size in units (2.6 only)
    --note-table-size             kernel notes buffer size in notes units (2.4 only)
 " >&2
 }
@@ -218,6 +219,7 @@ do_init()
 	# for these three buffer size == 0 means use the default value
 	# hard-coded in op_user.h
 	BUF_SIZE=0
+	CPU_BUF_SIZE=0
 	NOTE_SIZE=0
 	VMLINUX=
 	VERBOSE=no
@@ -309,6 +311,9 @@ do_save_setup()
 	if test "$BUF_SIZE" != 0; then
 		echo "BUF_SIZE=$BUF_SIZE" >> $SETUP_FILE
 	fi;
+	if test "$KERNEL_SUPPORT" = "yes"; then
+		echo "CPU_BUF_SIZE=$CPU_BUF_SIZE" >> $SETUP_FILE
+	fi
 	if test "$KERNEL_SUPPORT" != "yes"; then
 		echo "NOTE_SIZE=$NOTE_SIZE" >> $SETUP_FILE
 	fi
@@ -333,6 +338,13 @@ do_load_setup()
 	else
 		vecho "BUF_SIZE default value"
 	fi;
+	if test "$KERNEL_SUPPORT" = "yes"; then
+		if test $CPU_BUF_SIZE != 0; then
+			vecho "CPU_BUF_SIZE $CPU_BUF_SIZE"
+		else
+		    vecho "CPU_BUF_SIZE default value"
+		fi;
+	fi
 
 	vecho "SEPARATE_LIB $SEPARATE_LIB"
 	vecho "SEPARATE_KERNEL $SEPARATE_KERNEL"
@@ -582,6 +594,15 @@ do_options()
 			--buffer-size)
 				error_if_empty $arg $val
 				BUF_SIZE=$val
+				DO_SETUP=yes
+				;;
+			--cpu-buffer-size)
+				if test "$KERNEL_SUPPORT" != "yes"; then
+					echo "$arg unsupported for this kernel version"
+					exit 1
+				fi
+				error_if_empty $arg $val
+				CPU_BUF_SIZE=$val
 				DO_SETUP=yes
 				;;
 			-e|--event)
@@ -845,6 +866,14 @@ do_param_setup()
 			echo $BUF_SIZE >$MOUNT/buffer_size
 		else
 			$SYSCTL -w dev.oprofile.bufsize=$BUF_SIZE
+		fi
+	fi
+
+	if test $CPU_BUF_SIZE != 0; then
+		if test "$KERNEL_SUPPORT" = "yes"; then
+			echo $CPU_BUF_SIZE >$MOUNT/cpu_buffer_size
+		else
+			echo "cpu-buffer-size not supported - ignored" >&2
 		fi
 	fi
 
