@@ -1,3 +1,9 @@
+2004-01-27  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* doc/opcontrol.1.in:
+	* doc/oprofile.xml:
+	* utils/opcontrol: add --cpu-buffer-size and document it.
+
 2004-01-27  Will Cohen  <wcohen@redhat.com>
 
 	* events/i386/p4/unit_masks:
